# launchMind

./: .vercelignore  README.md  bus.py  graph.py  main.py  pyproject.toml  requirements.txt  server.py  state.py  vercel.json  walkthrough_1
agents/: ceo.py  engineer.py  marketing.py  product.py  qa.py
api/: index.py
static/: app.js  index.html  style.css
