[project]
name = "launchmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "langchain-core>=1.3.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.8",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]
